--- a/ofline.html
+++ b/ofline.html
@@ -11,7 +11,7 @@
         <h1>Сборник задач</h1>
         <nav>
             <ul>
-                <li><a href="../index.html">На главную</a></li>
+                <a href="../index.html" class="btn">Вернуться на главную</a>
 				<li><a href="../tasks/task1.html">Задача 1</a></li>
 				<li><a href="../tasks/task2.html">Задача 2</a></li>
 				<li><a href="../tasks/task3.html">Задача 3</a></li>
