--- a/task1.html
+++ b/task1.html
@@ -10,13 +10,14 @@
     <header>
         <h1>Задача 1</h1>
         <nav>
-            <ul>
-                <li><a href="../index.html">На главную</a></li>
-				<li><a href="../podsite/online.html">К списку задач</a></li>
+            <ul>	
+				<a href="../index.html" class="btn">Вернуться на главную</a>
+				<button>Задача 1</button>
                 <li><a href="task2.html">Задача 2</a></li>
                 <li><a href="task3.html">Задача 3</a></li>
 				<li><a href="task4.html">Задача 4</a></li>
 				<li><a href="task5.html">Задача 5</a></li>
+				<script src="script.js"></script>
             </ul>
         </nav>
     </header>
