--- a/task12.html
+++ b/task12.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Режим "игра вдвоем"</title>
+    <title>Задача 12</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <header>
-        <h1>Режим "игра вдвоем"</h1>
+        <h1>Задача 12</h1>
         <nav>
             <ul>
                 <a href="../index.html" class="btn">Вернуться на главную</a>
+				<button>Задача 12</button>
             </ul>
         </nav>
     </header>
     <main>
-        <h2>Игровое поле</h2>
-        <p>-</p>
+        <h2>Описание задачи 12</h2>
+        <p>Здесь будет размещена задача по шахматам...</p>
     </main>
     <footer>
         <p>© 2024 Шахматный проект</p>
