--- a/task2.html
+++ b/task2.html
@@ -11,12 +11,12 @@
         <h1>Задача 2</h1>
         <nav>
             <ul>
-                <li><a href="../index.html">На главную</a></li>
-				<li><a href="../podsite/online.html">К списку задач</a></li>
-                <li><a href="task1.html">Задача 1</a></li>
+                <a href="../index.html" class="btn">Вернуться на главную</a>
+				<button>Задача 2</button>
                 <li><a href="task3.html">Задача 3</a></li>
 				<li><a href="task4.html">Задача 4</a></li>
 				<li><a href="task5.html">Задача 5</a></li>
+				<li><a href="task6.html">Задача 6</a></li>
             </ul>
         </nav>
     </header>
