--- a/task5.html
+++ b/task5.html
@@ -11,12 +11,12 @@
         <h1>Задача 5</h1>
         <nav>
             <ul>
-                <li><a href="../index.html">На главную</a></li>
-				<li><a href="../podsite/online.html">К списку задач</a></li>
-				<li><a href="task1.html">Задача 1</a></li>
-                <li><a href="task2.html">Задача 2</a></li>
-                <li><a href="task3.html">Задача 3</a></li>
-				<li><a href="task4.html">Задача 4</a></li>
+                <a href="../index.html" class="btn">Вернуться на главную</a>
+				<button>Задача 5</button>
+				<li><a href="task6.html">Задача 6</a></li>
+                <li><a href="task7.html">Задача 7</a></li>
+                <li><a href="task8.html">Задача 8</a></li>
+				<li><a href="task9.html">Задача 9</a></li>
             </ul>
         </nav>
     </header>
