--- a/task6.html
+++ b/task6.html
@@ -3,21 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Режим "игра вдвоем"</title>
+    <title>Задача 6</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <header>
-        <h1>Режим "игра вдвоем"</h1>
+        <h1>Задача 6</h1>
         <nav>
             <ul>
                 <a href="../index.html" class="btn">Вернуться на главную</a>
+				<button>Задача 6</button>
+				<li><a href="task7.html">Задача 7</a></li>
+                <li><a href="task8.html">Задача 8</a></li>
+                <li><a href="task9.html">Задача 9</a></li>
+				<li><a href="task10.html">Задача 10</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h2>Игровое поле</h2>
-        <p>-</p>
+        <h2>Описание задачи 6</h2>
+        <p>Здесь будет размещена задача по шахматам...</p>
     </main>
     <footer>
         <p>© 2024 Шахматный проект</p>
