--- a/tasks/task2.html
+++ b/tasks/task2.html
@@ -11,21 +11,18 @@
         <h1>Задача 2</h1>
         <nav>
             <ul>
-                <a href="../index.html" class="btn">Вернуться на главную</a>
-				<button>Задача 2</button>
-                <li><a href="task3.html">Задача 3</a></li>
-				<li><a href="task4.html">Задача 4</a></li>
-				<li><a href="task5.html">Задача 5</a></li>
-				<li><a href="task6.html">Задача 6</a></li>
-            </ul>
+                <li class="button-zagl">
+                    <button id="buttonBACK">Вернуться на главную</button>
+                    <button id="button5">Задача 3</button>
+                </li>
+        </ul>
         </nav>
     </header>
     <main>
-        <h2>Описание задачи 2</h2>
-        <p>Здесь будет размещена задача по шахматам...</p>
+        
     </main>
     <footer>
-        <p>© 2024 Шахматный проект</p>
+        <button>© 2024 Шахматный проект</button>
     </footer>
     <script src="../script.js"></script>
 </body>
