--- a/tasks/task1.html
+++ b/tasks/task1.html
@@ -10,23 +10,20 @@
     <header>
         <h1>Задача 1</h1>
         <nav>
-            <ul>	
-				<a href="../index.html" class="btn">Вернуться на главную</a>
-				<button>Задача 1</button>
-                <li><a href="task2.html">Задача 2</a></li>
-                <li><a href="task3.html">Задача 3</a></li>
-				<li><a href="task4.html">Задача 4</a></li>
-				<li><a href="task5.html">Задача 5</a></li>
-				<script src="script.js"></script>
-            </ul>
+            <ul>
+                <li class="button-zagl">
+                    <button id="buttonBACK">Вернуться на главную</button>
+                    <button id="button4">Задача 2</button>
+                    <button id="button5">Задача 3</button>
+                </li>
+        </ul>
         </nav>
     </header>
     <main>
-        <h2>Описание задачи 1</h2>
-        <p>Здесь будет размещена задача по шахматам...</p>
+        
     </main>
     <footer>
-        <p>© 2024 Шахматный проект</p>
+        <button>© 2024 Шахматный проект</button>
     </footer>
     <script src="../script.js"></script>
 </body>
