--- a/podsite/offline.html
+++ b/podsite/offline.html
@@ -3,23 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Режим "игра вдвоем"</title>
+    <title>Сборник задач</title>
     <link rel="stylesheet" href="../style.css">
-	<script src="../script.js"></script>
 </head>
 <body>
     <header>
-        <h1>Режим "игра вдвоем"</h1>
+        <h1>Сборник задач</h1>
         <nav>
             <ul>
-                <li class="button-zagl">
+				<li class="button-zagl">
                     <button id="buttonBACK">Вернуться на главную</button>
+                    <button id="button3">Задача 1</button>
+                    <button id="button4">Задача 2</button>
+                    <button id="button5">Задача 3</button>
                 </li>
             </ul>
         </nav>
     </header>
     <main>
-        <h2>Игровое поле</h2>
+        <h2></h2>
         <p>-</p>
     </main>
     <footer>
