--- a/index.html
+++ b/index.html
@@ -11,20 +11,19 @@
         <h1>Шахматные задачки</h1>
         <nav>
             <ul>
-			    <div class="button-zagl">
-					<button id="button1">Сборник задач</button>
-					<button id="button2">Игра вдвоём</button>
-				</div>
-				<script src="script.js"></script>
+                <li class="button-zagl">
+                    <button id="button1">Сборник задач</button>
+                    <button id="button2">Игра вдвоём</button>
+                </li>
             </ul>
         </nav>
     </header>
-    <main>	
-		<p>Выберите режим работы </p>
-		<image src="https://photobooth.cdn.sports.ru/preset/post/b/d5/7cf8164a84138970992e3018fd4e1.jpeg?f=webp&q=90&s=2x&w=730" width="300" hspace="20";
+    <main>  
+        
+        <img src="https://photobooth.cdn.sports.ru/preset/post/b/d5/7cf8164a84138970992e3018fd4e1.jpeg?f=webp&q=90&s=2x&w=730" width="300" hspace="20">
     </main>
     <footer>
-        <p>© 2024 Шахматный проект</p>
+        <button>© 2024 Шахматный проект</button>
     </footer>
     <script src="script.js"></script>
 </body>
