--- a/tasks/task2.html
+++ b/tasks/task2.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Задача 3</title>
+    <title>Задача 2</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <header>
-        <h1>Задача 3</h1>
+        <h1>Задача 2</h1>
         <nav>
             <ul>
                 <li class="button-zagl">
                     <button id="buttonBACK">Вернуться на главную</button>
+                    <button id="button5">Задача 3</button>
                 </li>
-            
         </ul>
         </nav>
     </header>
