--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li class="button-zagl">
-                    <button id="button1">Сборник задач</button>
+                    <button id="button1">Задачи</button>
                     <button id="button2">Игра вдвоём</button>
                 </li>
             </ul>
